update the docs

--- a/TECHNICAL_DOCUMENTATION.html
+++ b/TECHNICAL_DOCUMENTATION.html
@@ -3019,24 +3019,24 @@ python<span class="w"> </span>manage.py<span class="w"> </span>migrate
 <h3>Contact Support</h3>
 <h4>For Users</h4>
 <ul>
-<li><strong>Email</strong>: support@evmeri.com</li>
+<li><strong>Email</strong>: mengedmate@gmail.com</li>
 <li><strong>Phone</strong>: +251-911-123456</li>
 <li><strong>In-App Support</strong>: Settings &gt; Report an Issue</li>
 <li><strong>FAQ</strong>: Available in app under Settings &gt; FAQs</li>
 </ul>
 <h4>For Station Owners</h4>
 <ul>
-<li><strong>Email</strong>: partners@evmeri.com</li>
+<li><strong>Email</strong>: mengedmate@gmail.com</li>
 <li><strong>Phone</strong>: +251-911-654321</li>
 <li><strong>Dashboard Support</strong>: Help section in web dashboard</li>
-<li><strong>Technical Issues</strong>: tech-support@evmeri.com</li>
+<li><strong>Technical Issues</strong>: mengedmate@gmail.com</li>
 </ul>
 <h4>For Developers</h4>
 <ul>
 <li><strong>GitHub Issues</strong>: https://github.com/evmeri/evmeri/issues</li>
-<li><strong>Developer Email</strong>: dev@evmeri.com</li>
-<li><strong>Documentation</strong>: https://docs.evmeri.com</li>
-<li><strong>API Support</strong>: api-support@evmeri.com</li>
+<li><strong>Developer Email</strong>: mengedmate@gmail.com</li>
+<li><strong>Documentation</strong>: https://mengedmate.onrender.com/docs/technical</li>
+<li><strong>API Support</strong>: mengedmate@gmail.com/li>
 </ul>
 <hr />
 <h2>🧑‍🤝‍🧑 15. Contributing Guide</h2>
@@ -3385,7 +3385,7 @@ Add screenshots of UI changes
 <h4>For Contributors</h4>
 <ul>
 <li><strong>Discord</strong>: Join our contributor Discord server</li>
-<li><strong>Email</strong>: contributors@evmeri.com</li>
+<li><strong>Email</strong>: mengedmate@gmail.com</li>
 <li><strong>Mentorship</strong>: Pair with experienced contributors</li>
 <li><strong>Office Hours</strong>: Weekly virtual office hours</li>
 </ul>
